--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "hello",
+  "dependencies": {
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1"
+  },
+  "name": "servers",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "devDependencies": {},
   "scripts": {
     "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2",
-    "nodemon": "^3.0.1"
-  }
+  "description": ""
 }
